--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>Document</title>
 </head>
 <body>
-    <p>This is a new website</p>
+    <p>This is an edition on this website</p>
 </body>
 </html>
